--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@exponent/react-native-touchable-native-feedback-safe",
-  "version": "1.1.1",
+  "name": "react-native-touchable-native-feedback-safe",
+  "version": "1.1.2",
   "description": "Use TouchableNativeFeedback where possible and fallback to alternatives where not.",
   "main": "TouchableNativeFeedbackSafe.js",
   "scripts": {
